--- a/roles/debian_lynis/tasks/main.yml
+++ b/roles/debian_lynis/tasks/main.yml
@@ -6,3 +6,33 @@
 # https://docs.ansible.com/ansible/latest/collections/ansible/builtin/apt_key_module.html
 # https://docs.ansible.com/ansible/latest/collections/ansible/builtin/apt_repository_module.html
 # ===
+
+- name: ensure that the required dependency packages are installed on from the debian host
+  apt:
+    name:
+      - apt-transport-https
+      - ca-certificates
+    state: present
+
+- name: add the apt signing key for lynis, uses whichever key is at the url
+  apt_key:
+    id: C80E383C3DE9F082E01391A0366C67DE91CA5D5F
+    url: https://packages.cisofy.com/keys/cisofy-software-public.key
+    validate_certs: yes
+    state: present
+
+- name: add the lynis repository to the debian host
+  apt_repository:
+    repo: deb https://packages.cisofy.com/community/lynis/deb/ stable main
+    filename: cisofy-lynis
+    state: present
+
+- name: force apt to check if cache is out of date and redownload if needed
+  apt:
+    update_cache: yes
+
+- name: ensure that lynis is installed on the centos host
+  apt:
+    name:
+      - lynis
+    state: present
