--- a/roles/centos_lynis_remove/tasks/main.yml
+++ b/roles/centos_lynis_remove/tasks/main.yml
@@ -1,2 +1,14 @@
 ---
 # tasks file for centos_lynis_remove
+
+# ===
+# https://docs.ansible.com/ansible/latest/collections/ansible/builtin/dnf_module.html
+# https://docs.ansible.com/ansible/latest/collections/ansible/builtin/yum_repository_module.html
+# https://docs.ansible.com/ansible/latest/collections/ansible/builtin/apt_repository_module.html
+# ===
+
+- name: ensure that lynis is installed on the centos host
+  dnf:
+    name:
+      - lynis
+    state: absent
