task to remove the lynis repository

--- a/roles/debian_lynis_remove/tasks/main.yml
+++ b/roles/debian_lynis_remove/tasks/main.yml
@@ -12,3 +12,9 @@
     name:
       - lynis
     state: absent
+
+- name: remove the lynis repository to the debian host
+  apt_repository:
+    repo: deb https://packages.cisofy.com/community/lynis/deb/ stable main
+    filename: cisofy-lynis
+    state: absent
