added debian 10 as a supported platform

--- a/roles/centos_lynis/meta/main.yml
+++ b/roles/centos_lynis/meta/main.yml
@@ -31,6 +31,9 @@ galaxy_info:
    - name: CentOS
      versions:
      - Stream
+   - name: Debian
+     versions:
+     - 10
   #   - 25
   # - name: SomePlatform
   #   versions:
