added debian 10 as a supported platform - debian_lynis role

--- a/roles/debian_lynis/meta/main.yml
+++ b/roles/debian_lynis/meta/main.yml
@@ -28,7 +28,10 @@ galaxy_info:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
   platforms:
-   - name: Debain
+   - name: CentOS
+     versions:
+     - Stream
+   - name: Debian
      versions:
      - 10
   #   - 25
