fixed typo in task name, updated the apt signing key for lynis

--- a/roles/debian_lynis/tasks/main.yml
+++ b/roles/debian_lynis/tasks/main.yml
@@ -18,7 +18,7 @@
 
 - name: add the apt signing key for lynis, uses whichever key is at the url
   apt_key:
-    id: C80E383C3DE9F082E01391A0366C67DE91CA5D5F
+    id: 013baa07180c50a7101097ef9de922f1c2fde6c4
     url: https://packages.cisofy.com/keys/cisofy-software-public.key
     validate_certs: yes
     state: present
@@ -33,7 +33,7 @@
   apt:
     update_cache: yes
 
-- name: ensure that lynis is installed on the centos host
+- name: ensure that lynis is installed on the debian host
   apt:
     name:
       - lynis
