--- a/roles/debian_lynis/meta/main.yml
+++ b/roles/debian_lynis/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: hubvu
-  description: an ansible role that deploys lynis - a free and open source security audit tool; onto a debian host
+  description: Ansible Role that deploys Lynis, which is a free and open source security auditing tool, onto a Debian server installation.
   company: N/A
 
   # If the issue tracker for your role is not on github, uncomment the
@@ -28,9 +28,9 @@ galaxy_info:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
   platforms:
-   - name: Debian
-     versions:
-     - 10
+    - name: Debian
+      versions:
+        - 10
   #   - 25
   # - name: SomePlatform
   #   versions:
@@ -39,7 +39,8 @@ galaxy_info:
   #   - 7
   #   - 99.99
 
-  galaxy_tags: []
+  galaxy_tags:
+    []
     # List tags for your role here, one per line. A tag is a keyword that describes
     # and categorizes the role. Users find roles by searching for tags. Be sure to
     # remove the '[]' above, if you add tags to this list.
@@ -47,6 +48,7 @@ galaxy_info:
     # NOTE: A tag is limited to a single word comprised of alphanumeric characters.
     #       Maximum 20 tags per role.
 
-dependencies: []
+dependencies:
+  []
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
