--- a/roles/centos_lynis/tasks/main.yml
+++ b/roles/centos_lynis/tasks/main.yml
@@ -23,7 +23,7 @@
     enabled: yes
     gpgkey: https://packages.cisofy.com/keys/cisofy-software-rpms-public.key
     gpgcheck: yes
-    priority: '2'
+    priority: "2"
 
 - name: force dnf to check if cache is out of date and redownload if needed
   dnf:
